update fotos do projeto

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <picture>
                 <source media="(max-width: 670px)" srcset="dan-droids-pq.png">
-                <img src="dan-droids.png" alt="Dandroids"></picture>
+                <img src="imagens/dan-droids.png" alt="Dandroids"></picture>
 
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.</p>
 
@@ -56,7 +56,7 @@
 
             <picture>
                 <source media="(max-width: 670px)" srcset="irina-blok-pq.jpg">
-                <img src="irina-blok.jpg" alt="Irina Blok"></picture>
+                <img src="imagens/irina-blok.jpg" alt="Irina Blok"></picture>
 
             <p>
                 A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O
@@ -64,7 +64,7 @@
                 do Android.
             </p>
 
-            <img src="bugdroid.png" class="pequena" alt="Bugdroid">
+            <img src="imagens/bugdroid.png" class="pequena" alt="Bugdroid">
 
             <p>
                 A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de
