--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </p>
 
             <picture>
-                <source media="(max-width: 670px)" srcset="dan-droids-pq.png">
+                <source media="(max-width: 670px)" srcset="imagens/dan-droids-pq.png">
                 <img src="imagens/dan-droids.png" alt="Dandroids"></picture>
 
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong>Dandroids</strong>.</p>
@@ -55,7 +55,7 @@
             </p>
 
             <picture>
-                <source media="(max-width: 670px)" srcset="irina-blok-pq.jpg">
+                <source media="(max-width: 670px)" srcset="imagens/irina-blok-pq.jpg">
                 <img src="imagens/irina-blok.jpg" alt="Irina Blok"></picture>
 
             <p>
